--- a/ejb-server/pom.xml
+++ b/ejb-server/pom.xml
@@ -16,6 +16,17 @@
             <artifactId>javax.ejb-api</artifactId>
             <version>3.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>lublin.umcs.thesis</groupId>
+            <artifactId>board-game-rent</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
