Successful deploy of application. Todo move repository definitions to board-game-rent core jar.

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>corba-common-api</module>
         <module>rmi-common-api</module>
         <module>board-game-rent</module>
+        <module>board-game-rent-ear</module>
     </modules>
 
     <dependencies>
